# fortress

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DOXYFILE  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  TODO  _config.yml  about.md  test.yaml  todo.otl
_posts/: 2015-09-11-welcome-to-fortress.markdown  2015-09-11-welcome-to-jekyll.markdown  2015-09-12-virtual-template-functions.md  2015-09-12-welcome-to-fortress.markdown  2015-09-14-breaking-out-the-generator.md  2015-09-18-alpha-2-is-complete.md
config/: config.yaml  graphics.cfg
data/prefabs/: apple.yaml  corpse.yaml  dog.yaml  door.yaml  forester.yaml  helmet.yaml  human.yaml  (+10 more)
maps/: test.map  testmap.txt  testmap3.txt  testmap4.txt  testmap6.txt
src/: .screen.cpp.swp  CMakeLists.txt  Makefile  algorithm.cpp  algorithm.h  base_component.h  base_system.cpp  base_system.h  collider_component.h  color.cpp  color.h  combat_system.cpp  combat_system.h  component_base.h  component_manager.cpp  component_manager.h  component_manager_interface.h  config_manager.cpp  config_manager.h  description_component.h  droppable_component.h  dungeon_generator.cpp  dungeon_generator.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  entity_manager_interface.h  equipment_component.h  equipment_system.cpp  equipment_system.h  equipment_window.cpp  equipment_window.h  event.cpp  event.h  event_manager.h  event_manager_interface.h  file_loader.cpp  file_loader.h  file_saver.cpp  (+76 more)
src/algos/: CMakeLists.txt  algorithm.cpp  algorithm.h  fov_algorithm.cpp  fov_algorithm.h  los_algorithm.cpp  los_algorithm.h
src/components/: CMakeLists.txt  collider_component.h  combat_component.h  component_base.h  connector_component.h  consumable_component.h  debug_component.h  description_component.h  dialog_component.h  droppable_component.h  equipment_component.h  experience_component.h  game_component.h  graphics_effect_component.h  grouping_component.h  health_component.h  identity_component.h  key_component.h  logmessage_component.h  npc_component.h  openable_component.h  player_component.h  sprite_component.h  stair_component.h  wearable_component.h  wieldable_component.h
src/core/: CMakeLists.txt  area_info.cpp  area_info.h  camera.cpp  camera.h  color.cpp  color.h  component_manager.cpp  component_manager.h  config_manager.cpp  config_manager.h  entity.h  entity_manager.cpp  entity_manager.h  entity_manager_interface.h  event.h  event_manager.cpp  event_manager.h  event_manager_interface.h  file_loader.cpp  file_loader.h  file_saver.cpp  file_saver.h  floor.cpp  floor.h  game_engine.cpp  game_engine.h  game_engine_interface.h  game_state.cpp  game_state.h  game_system_base.cpp  game_system_base.h  game_system_interface.h  graphics.cpp  graphics.h  graphics_interface.h  graphics_sdl.cpp  graphics_sdl.h  location.cpp  location.h  (+22 more)
src/generators/: CMakeLists.txt  dungeon_generator.cpp  dungeon_generator.h  generator_interface.h  room.cpp  room.h  rural_generator.cpp  rural_generator.h
src/systems/: CMakeLists.txt  combat_system.cpp  combat_system.h  consumable_system.cpp  consumable_system.h  dialog_system.cpp  dialog_system.h  equipment_system.cpp  equipment_system.h  experience_system.cpp  experience_system.h  fov_system.cpp  fov_system.h  graphics_effect_system.cpp  graphics_effect_system.h  health_system.cpp  health_system.h  interaction_system.cpp  interaction_system.h  logmessage_system.cpp  logmessage_system.h  map_generator_system.cpp  map_generator_system.h  movement_system.cpp  movement_system.h  npc_system.cpp  npc_system.h  objectives_system.cpp  objectives_system.h  prefab_system.cpp  prefab_system.h  rural_generator_system.cpp  rural_generator_system.h  window_system.cpp  window_system.h
src/widgets/: CMakeLists.txt  camera.cpp  camera.h  frame.cpp  frame.h  icon.h  label.h  listbox.cpp  listbox.h  numeric_entry.cpp  numeric_entry.h  progress_bar.h  tab.h  text_block.h  text_entry.h  widget.h
src/windows/: CMakeLists.txt  camera.cpp  camera.h  debug_window.cpp  debug_window.h  dialog_window.cpp  dialog_window.h  equipment_window.cpp  equipment_window.h  escape_window.cpp  escape_window.h  frame.cpp  frame.h  game_over_window.cpp  game_over_window.h  generator_window.cpp  generator_window.h  icon.cpp  icon.h  inspection_window.cpp  inspection_window.h  interaction_window.cpp  interaction_window.h  label.cpp  label.h  listbox.cpp  listbox.h  load_window.cpp  load_window.h  main_window.cpp  main_window.h  map_window.cpp  map_window.h  numeric_entry.cpp  numeric_entry.h  progress_bar.cpp  progress_bar.h  quest_window.cpp  quest_window.h  save_window.cpp  (+17 more)
src/world/: CMakeLists.txt  grouping.cpp  grouping.h  grouping_manager.cpp  grouping_manager.h  world_info.cpp  world_info.h
test/: CMakeLists.txt  Makefile  base_system_mock.h  base_system_test.cpp  camera_test.cpp  color_test.cpp  combat_system_test.cpp  component_manager_mock.h  component_manager_test.cpp  config_manager_test.cpp  entity_manager_mock.h  entity_manager_test.cpp  entity_test.cpp  event_manager_mock.h  event_manager_test.cpp  event_test.cpp  game_engine_mock.h  game_engine_test.cpp  game_state_mock.h  game_state_test.cpp  generator_mock.h  generator_test.cpp  graphics_mock.h  location_test.cpp  map_manager_mock.h  map_window_test.cpp  movement_system_test.cpp  npc_system_test.cpp  prefab_builder_test.cpp  splash_window_test.cpp  sprite_system_test.cpp  test.cfg  test_main.cpp  window_manager_mock.h  window_manager_test.cpp  window_mock.h  window_test.cpp
test/save_load_tests/: CMakeLists.txt  component_tests.cpp  save_load_tests.cpp
test/unit_tests/: CMakeLists.txt  test_main.cpp
test/unit_tests/mocks/: game_engine_mock.h  game_state_mock.h  graphics_mock.h
test/unit_tests/tests/: combat_system_test.cpp  component_manager_test.cpp  component_tests.cpp  dialog_system_test.cpp  entity_manager_test.cpp  frame_test.cpp  interaction_system_test.cpp  label_test.cpp  listbox_test.cpp  map_manager_test.cpp  npc_system_test.cpp  numeric_entry_test.cpp  progress_bar_test.cpp  tab_test.cpp  text_block_test.cpp  widget_test.cpp
(+650 files in other folders)
